// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2024";

package com.google.android.libraries.pcc.chronicle.storage.blobstore;

option java_outer_classname = "TestPlaceOuterClass";
option features.field_presence = IMPLICIT;
option java_package = "com.google.android.libraries.pcc.chronicle.storage.blobstore";

message TestPlace {
  string city = 1;
  string country = 2;
}
